Python/Automatisering/Task scheduler/logs/00_email.log
  File "<fstring>", line 1
    (log_urls.get(f"{row["task"]}", "#"))
                          ^
SyntaxError: invalid syntax
